fix: main section wrapping content when screen size reduced

--- a/styles/main.css
+++ b/styles/main.css
@@ -108,6 +108,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    height: auto;
+    flex-grow: 1; 
+    flex-basis: 25rem; 
     width: 50%;
 }
 
